--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "react-router": "^7.6.0",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
-    "tailwindcss": "^4.1.7",
-    "use-debounce": "^10.0.4"
+    "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
